


        *************************************************
        *                                               *
        *               0.6 SERIES NEWS                 *
        *                                               *
        *************************************************

                CHANGES IN phylobase VERSION 0.6.10

   *  Initial basic support for converting RNeXML objects in phylo4 and phylo4d
      format.

   *  All documentation is now in Roxygen format

   *  New methods: internalEdges(), terminalEdges()

   *  hasPoly, hasRetic, hasSingle are now methods instead of functions.

   *  rootNode returns the rootNode using the same format as getNode().

                CHANGES IN phylobase VERSION 0.6.8

   *   Not many user-visible changes, most are related to improving speeds
       during test of object validation (most tests done in C++) and to getNode
       that is used by many functions.

   *  Changes to package structure to make it compatible with devtools
      (switching testing to testthat -- partial at this stage) and docs to
      roxygen format (partial at this stage).

   *  Changes to package structure to comply with new Rcpp standards

                CHANGES IN phylobase VERSION 0.6.5

   *  Updates from cout/cerr to Rcpp::Rcout/Rcerr

   *  Comments in Nexus tree strings are being removed before being processed by
      readNCL

                CHANGES IN phylobase VERSION 0.6.3

   *   Fixed bugs in getNode in cases where labels included regexpr
       metacharacters and when a tip was labelled 0

   *   New methods: depthTips, nodeDepth and isUltrametric


                CHANGES IN phylobase VERSION 0.6.2

   *   Improve handling of errors returned by NCL (NxsException)

   *   Fix bug in case state labels are missing from the NEXUS file
   
   *   Upgrade to NCL 2.1.14

                CHANGES IN phylobase VERSION 0.6.1

   *   Fix bugs that prevented building on Windows 64-bit systems

